--- a/vorlange_aus_03_22.ipynb
+++ b/vorlange_aus_03_22.ipynb
@@ -509,23 +509,7 @@
    "source": [
     "def init_wuensche():\n",
     "    # arzt(name,klinik,nur12=False,nurhaus=False,maximum=99, wunsch=[], frei=[])\n",
-    "    # wunsch(\"Name\", w=[], f=[])\n",
-    "    wunsch(\"Jaster\", w=[], f=[])\n",
-    "    wunsch(\"Weiss\", w=[], f=[])\n",
-    "    wunsch(\"Böhm\", w=[], f=[])\n",
-    "    wunsch(\"Klaunick\", w=[], f=[])\n",
-    "    wunsch(\"Bebersdorf\", w=[], f=[])\n",
-    "    wunsch(\"Elhasan\", w=[], f=[])\n",
-    "    wunsch(\"Wagner\", w=[], f=[])\n",
-    "    wunsch(\"Mohnke\", w=[], f=[])\n",
-    "    wunsch(\"Alsheblak\", f=[], w=[])\n",
-    "    wunsch(\"Scheibner\", w=[], f=[])\n",
-    "    wunsch(\"Ritscher\", w=[], f=[])\n",
-    "    wunsch(\"Szigat\", w=[], f=[])\n",
-    "    wunsch(\"Schulz\", w=[], f=[])\n",
-    "    wunsch(\"Surugiu\", w=[], f=[])\n",
-    "    wunsch(\"Rieck\", w=[], f=[])\n",
-    "    wunsch(\"Ghimire\", w=[], f=[])"
+    "    # wunsch(\"Name\", w=[], f=[])\n"
    ]
   },
   {
