--- a/vorlange_aus_03_22.ipynb
+++ b/vorlange_aus_03_22.ipynb
@@ -509,7 +509,7 @@
    "source": [
     "def init_wuensche():\n",
     "    # arzt(name,klinik,nur12=False,nurhaus=False,maximum=99, wunsch=[], frei=[])\n",
-    "    # wunsch(\"Name\", w=[], f=[])\n"
+    "    # wunsch(\"Name\", w=[], f=[])\n",
    ]
   },
   {
