--- a/VORLAGE.ipynb
+++ b/VORLAGE.ipynb
@@ -510,27 +510,7 @@
    "outputs": [],
    "source": [
     "def init_aerzte():\n",
-    "    # arzt(\"Name\", klinik)\n",
-    "    arzt(\"Alsheblak\", 2)\n",
-    "    arzt(\"Bebersdorf\", 2)\n",
-    "    arzt(\"Elhasan\", 1)\n",
-    "    arzt(\"Ghimire\", 1, nurhaus=True)\n",
-    "    arzt(\"Jaster\", 2)\n",
-    "    # arzt(\"Jugert\", 1)\n",
-    "    arzt(\"Klaunick\", 1)\n",
-    "    # arzt(\"Kruse\", 1)\n",
-    "    arzt(\"Mohnke\", 2)\n",
-    "    arzt(\"Ritscher\", 2, maximum=3)\n",
-    "    arzt(\"Scheibner\", 3, nur12=True, maximum=1)\n",
-    "    arzt(\"Schulz\", 3)\n",
-    "    # arzt(\"Schunke\", 2)\n",
-    "    arzt(\"Surugiu\", 2)\n",
-    "    arzt(\"Szigat\", 2)\n",
-    "    arzt(\"Wagner\", 1)\n",
-    "    # arzt(\"Wenig\", 1)\n",
-    "    arzt(\"Weiss\", 4, nurhaus=True)\n",
-    "    arzt(\"Böhm\",2 , nurhaus=True)\n",
-    "    arzt(\"Rieck\",2 , nurhaus=True)"
+    "    # arzt(\"Name\", klinik)"
    ]
   },
   {
@@ -548,23 +528,7 @@
    "source": [
     "def init_wuensche():\n",
     "    # arzt(name,klinik,nur12=False,nurhaus=False,maximum=99, wunsch=[], frei=[])\n",
-    "    # wunsch(\"Name\", w=[], f=[])\n",
-    "    wunsch(\"Jaster\", w=[], f=[])\n",
-    "    wunsch(\"Weiss\", w=[], f=[])\n",
-    "    wunsch(\"Böhm\", w=[], f=[])\n",
-    "    wunsch(\"Klaunick\", w=[], f=[])\n",
-    "    wunsch(\"Bebersdorf\", w=[], f=[])\n",
-    "    wunsch(\"Elhasan\", w=[], f=[])\n",
-    "    wunsch(\"Wagner\", w=[], f=[])\n",
-    "    wunsch(\"Mohnke\", w=[], f=[])\n",
-    "    wunsch(\"Alsheblak\", f=[], w=[])\n",
-    "    wunsch(\"Scheibner\", w=[], f=[])\n",
-    "    wunsch(\"Ritscher\", w=[], f=[])\n",
-    "    wunsch(\"Szigat\", w=[], f=[])\n",
-    "    wunsch(\"Schulz\", w=[], f=[])\n",
-    "    wunsch(\"Surugiu\", w=[], f=[])\n",
-    "    wunsch(\"Rieck\", w=[], f=[])\n",
-    "    wunsch(\"Ghimire\", w=[], f=[])"
+    "    # wunsch(\"Name\", w=[], f=[])"
    ]
   },
   {
